--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cypress-only-tests",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "cypress open",
+      "ci": "cypress run"
   },
   "author": "",
   "license": "ISC",
